--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -36,5 +36,11 @@
         }
       ]
     }
+  },
+  "storage": {
+    "notesdb": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
