--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -19,6 +19,12 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
       "dependsOn": []
+    },
+    "noterfuncjs": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": []
     }
   },
   "api": {
